Fixed #2458 - Create a README for studio/server project install under eclipse
I downloaded a fresh Eclipse, install specified Eclipse packages, get the source from SVN, configure the Run Configuration and successfully launch the Studio.

I have append some details in the readme.txt